styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* TODO Docs https://ui.shadcn.com/docs/components/sidebar#installation */
@layer base {
  :root {
    --sidebar-background: #fafafa; /* neutral-50 */
    --sidebar-foreground: #404040; /* neutral-700 */
    /* --sidebar-primary: #e5e5e5; */ /* neutral-200 */
    /* --sidebar-primary-foreground: #18181b; */ /* zinc-900 */
    --sidebar-accent: #f4f4f5; /* zinc-100 */
    --sidebar-accent-foreground: #171717; /* zinc-900 */
    --sidebar-border: #d1d5db; /* gray-300 */
    --sidebar-ring: #0ea5e9; /* sky-500 */
  }

  .dark {
    --sidebar-background: #171717; /* neutral-900 */
    --sidebar-foreground: #f5f5f5; /* neutral-100 */
    /* --sidebar-primary: #262626; */ /* neutral-800 */
    /* --sidebar-primary-foreground: #fafafa; */ /* neutral-50 */
    --sidebar-accent: #27272a; /* zinc-800 */
    --sidebar-accent-foreground: #f4f4f5; /* zinc-100 */
    --sidebar-border: #3f3f46; /* zinc-700 */
    --sidebar-ring: #0ea5e9; /* sky-500 */
  }
}

html {
  scroll-behavior: smooth !important;
  scroll-padding-top: 2rem;
  /* setting for all */
  /* scroll-padding-top: 4rem; */
  /* setting for specific target */
  /* <section id='section-books' className='scroll-mt-20 scroll-pt-20'> */
}

body {
  overflow-x: hidden;
}

.scrollbar-track-rounded::-webkit-scrollbar-track {
  border-radius: 999px;
}

.scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
  border-radius: 999px;
}

.scrollbar-thinner {
  scrollbar-width: 4px !important;
}
.scrollbar-thinner::-webkit-scrollbar {
  width: 4px !important;
  height: 4px !important;
}

.banner {
  background: linear-gradient(
      145deg,
      rgba(4, 116, 120, 0.5) 34%,
      transparent 34%,
      transparent 64%,
      rgba(5, 128, 150, 0.5) 64%,
      rgba(5, 140, 150, 0.5) 100%
    ),
    linear-gradient(
      40deg,
      rgb(4, 103, 120) 0%,
      /* rgb(4, 120, 87) 62%, */ rgb(16, 174, 185) 62%,
      rgb(16, 174, 185) 100%
    );
}

input[type='date']::-webkit-calendar-picker-indicator {
  cursor: pointer;
  filter: invert(0.6);
  font-size: 16px !important;
}

/* REACT MULTI SELECT  */
html[class='dark'] {
  --bg-react-select-control: #171717;
  --bg-react-select-menu: #1f1f1f;
  --bg-react-select-option-hover: #262626;
  --text-react-select-option: white;
  --react-select-indicator: #d4d4d4;
  --react-select-border: #404040;
}

html {
  --bg-react-select-control: white;
  --bg-react-select-menu: white;
  --bg-react-select-option-hover: #f3f4f6;
  --text-react-select-option: #171717;
  --react-select-indicator: #737373;
  --react-select-border: #d4d4d4;
}

.react-select__input:focus {
  box-shadow: none !important;
  color: var(--text-react-select-option) !important;
}

.react-select__control {
  background-color: var(--bg-react-select-control) !important;
  border-color: var(--react-select-border) !important ;
  cursor: pointer !important;
  height: auto;
  min-height: 40px !important;
  border-radius: 6px !important;
}

.react-select__value-container {
  padding: 4px 6px !important;
}

.react-select__control--is-focused {
  @apply !outline-none !ring-2 !ring-sky-500;
}

.react-select__multi-value {
  background-color: #0ea5e9 !important;
  border-radius: 4px !important;
  margin-right: 4px !important;
  color: white !important;
}

.react-select__multi-value__label {
  color: white !important;
}

.react-select__indicator {
  color: var(--react-select-indicator) !important;
}

.react-select__menu {
  background-color: var(--bg-react-select-menu) !important;
  cursor: pointer !important;
  color: var(--text-react-select-option);
  border: none;
}

.react-select__option:hover {
  color: white;
  cursor: pointer !important;
}

.react-select__option--is-focused {
  color: white !important;
}

.react-select__indicator-separator {
  @apply !bg-neutral-200 dark:!bg-neutral-600;
}

/* NProgress */
/* Progress Bar on Top of Page  */
html[class='light'] {
  --nprogress-color: #0ea5e9;
}

html[class='dark'] {
  --nprogress-color: #0ea5e9;
}

#nprogress .bar {
  /* background: var(--nprogress-color) !important; */
  @apply !bg-sky-500 !shadow-sky-500/50 dark:!bg-sky-400 dark:!shadow-sky-400/50;
}

#nprogress .spinner-icon {
  display: none;
}

/* Footer Link Hover Animation */
.hover-underline-animation {
  display: inline-block;
  position: relative;
}

.hover-underline-animation:after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 1px;
  bottom: -2px;
  left: 0;
  transform-origin: bottom center;
  transition: transform 0.3s ease-out;
  @apply bg-neutral-500 dark:bg-neutral-300;
}

.hover-underline-animation:hover:after {
  transform: scaleX(1);
  transform-origin: bottom center;
}

